# passwordManager

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  log.txt  netlify.toml  nixpacks.toml  package-lock.json  railway.toml  start.bat  start.bat.local  start.sh
backend/: .env.local  .gitignore  alembic.ini  api.py  main.py  password_manager.py  pyproject.toml  rate_limiter.py  requirements.txt  reset_limits.py  test_email.py  users.json
backend/app/: config.py
backend/app/api/: auth.py  routes.py
backend/app/core/: account_manager.py  crypto.py  database.py  interfaces.py  models.py  password_analyzer.py  password_manager.py  user_manager.py
backend/app/utils/: email.py  rate_limiter.py  security.py  totp.py
backend/data/: password_manager.db
backend/migrations/: env.py
backend/migrations/versions/: c9d36b8242e0_add_email_and_reset_token_fields_to_.py
backend/scripts/: reset_database.py  reset_limits.py  update_schema.py
backend/tests/: test_auth.py  test_password_age.py  test_rate_limit.py
frontend/: package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: AddAccount.tsx  Dashboard.tsx  EditAccount.tsx  ForgotPassword.tsx  LoginForm.tsx  PasswordGenerator.tsx  ResetPassword.tsx  SecurityInsights.tsx  SecurityScore.tsx  TwoFactorSetup.tsx
frontend/src/types/: account.ts
frontend/src/utils/: axios.ts
netlify/functions/: api.py
src/: password_manager.py
(+23 files in other folders)
